<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/turn_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_dimen"
        android:textAlignment="center"
        android:padding="@dimen/small_dimen"
        android:text="@string/friends_turn"
        android:textColor="@color/title_text_color"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/show_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_dimen"
        android:textAlignment="center"
        android:textSize="@dimen/large_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/true_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/turn_view"
        tools:text="question text will be here!"/>


    <Button
        android:id="@+id/true_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_dimen"
        android:text="@string/true_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/false_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/false_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_dimen"
        android:text="@string/false_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/true_button" />

</androidx.constraintlayout.widget.ConstraintLayout>